--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2001-12-05  Ryan C Yeske  <rcyeske@sfu.ca>
+
+	* contrib/genrpbindings: Fix perl typos.  From Doug Kearns
+	<djkea2@mugc.its.monash.edu.au>.
+
+2001-12-04  Ryan C Yeske  <rcyeske@sfu.ca>
+
+	* contrib/genrpbindings: New file.
+
+	* src/actions.c (user_commands): Add markup for genrpbindings.
+	(cmd_getenv): New function.
+
 2001-10-18  shawn  <sabetts@vcn.bc.ca>
 
 	* src/split.c (show_frame_indicator): call XSync after clearing the window.
