--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2001-12-11  Ryan C Yeske  <rcyeske@sfu.ca>
+
+	* contrib/genrpbindings: Add ruby bindings.  From Doug Kearns
+	<djkea2@mugc.its.monash.edu.au>.
+
 2001-12-08  shawn  <sabetts@vcn.bc.ca>
 
 	* src/events.c (handle_key): revert the focus immediately after
