--- a/ChangeLog
+++ b/ChangeLog
@@ -22,7 +22,7 @@
 	* src/manage.c (maximize_transient): Fit the transient window
 	inside its frame.
 
-2001-12-11  John Betts  <hotpulp@netidea.com>
+2001-12-11  shawn  <sabetts@vcn.bc.ca>
 
 	* src/actions.c (parse_keydesc): Don't mangle the key description
 	argument.
