added some contributors

--- a/AUTHORS
+++ b/AUTHORS
@@ -10,3 +10,12 @@ Ryan Yeske (rcyeske@vcn.bc.ca)
 Ryan began hacking on ratpoison so he could ssh his university
 by only pressing 3 keys.  He also thinks that a keyboard driven window
 manager is the optimal user interface for penbased handheld computers.
+
+Other Contributors:
+
+Gergely Nagy <algernon@debian.org>
+Martin Samuelsson <cosis@lysator.liu.se>
+Jonathan Walther <krooger@debian.org>
+Chr. v. Stuckrad <stucki@math.fu-berlin.de>
+Doug Kearns <djkea2@mugc.its.monash.edu.au>
+Mike Meyer <mwm@mired.org>
