--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,14 @@
 ratpoison NEWS --- history of user-visible changes.  -*- outline -*-
 
 * Changes since 1.0.0
+** input history
+All input you type into ratpoison is stored as a history entry. Use
+C-p and C-n to cycle through it.
+
+** new command "defbarpadding"
+This command specifies how much ratpoison pads the bar window. See the
+documentation for usage.
+
 ** new command "link"
 Call the command that a keybinding is bound to. for instance, 'link
 C-t' would call the command 'other'.
