--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,24 @@
 2001-12-21  shawn  <sabetts@vcn.bc.ca>
 
+	* src/manage.c (unmanage): set the kill_signalled variable.
+
+	* src/actions.c (wingravity_to_string): new function
+	(cmd_gravity): return the current value when data is NULL
+	(cmd_defwingravity): likewise
+	(cmd_deftransgravity): likewise
+	(cmd_defmaxsizegravity): likewise
+	(cmd_msgwait): likewise
+	(cmd_defbarloc): likewise
+	(cmd_defpadding): likewise
+	(cmd_defborder): likewise
+	(cmd_definputwidth): likewise
+	(cmd_defwaitcursor): likewise
+	(cmd_defwinfmt): likewise
+	(cmd_defwinname): likewise
+	(cmd_defbarpadding): likewise
+	(cmd_startup_message): likewise
+	(cmd_rudeness): likewise
+
 	* src/sbuf.h (sbuf_printf_concat): new prototype
 	(sbuf_printf): likewise
 
