*** empty log message ***

--- a/AUTHORS
+++ b/AUTHORS
@@ -19,3 +19,4 @@ Jonathan Walther <krooger@debian.org>
 Chr. v. Stuckrad <stucki@math.fu-berlin.de>
 Doug Kearns <djkea2@mugc.its.monash.edu.au>
 Mike Meyer <mwm@mired.org>
+Ben Leslie <benno@sesgroup.net>
